// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ellipsis It should render standard 1`] = `
<DocumentFragment>
  <div
    class="ids-ellipsis"
  >
    <div
      class="ids-ellipsis__content"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
  vestibulum ex vel felis commodo auctor. Nulla pulvinar velit eget
  scelerisque mattis. Curabitur augue leo, gravida non quam at, viverra
  varius metus. Mauris convallis, justo et fringilla rhoncus, nisi est
  tristique dui, ac consequat mauris erat sed lacus. Pellentesque interdum
  vel nibh non mattis. Donec vitae nulla massa. Vestibulum facilisis, lorem
  in egestas interdum, nibh ligula gravida nisl, nec interdum massa orci sit
  amet nisi. Sed fringilla vestibulum metus id auctor. Ut mollis auctor
  odio, eu consequat dui bibendum vitae. Sed aliquet luctus vestibulum.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Ellipsis It should render with a title 1`] = `
<DocumentFragment>
  <div
    class="ids-ellipsis"
    title="This is a title"
  >
    <div
      class="ids-ellipsis__content"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
  vestibulum ex vel felis commodo auctor. Nulla pulvinar velit eget
  scelerisque mattis. Curabitur augue leo, gravida non quam at, viverra
  varius metus. Mauris convallis, justo et fringilla rhoncus, nisi est
  tristique dui, ac consequat mauris erat sed lacus. Pellentesque interdum
  vel nibh non mattis. Donec vitae nulla massa. Vestibulum facilisis, lorem
  in egestas interdum, nibh ligula gravida nisl, nec interdum massa orci sit
  amet nisi. Sed fringilla vestibulum metus id auctor. Ut mollis auctor
  odio, eu consequat dui bibendum vitae. Sed aliquet luctus vestibulum.
    </div>
  </div>
</DocumentFragment>
`;
